--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,10 @@
+.bike-search {
+  margin-top: 60px;
+}
+
+.bike-results {
+  margin-top: 15px;
+}
 img {
   height: 150px;
   width: auto;
@@ -9,6 +16,55 @@ img {
 }
 
 .jumbotron {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: url("https://media3.giphy.com/media/uPu4Ny3Buqre0/200.webp#97-grid1");
   background-size: 450px;
+}
+
+.jumbotron h1 {
+  font-stretch: expanded;
+  font-family: Jazz LET, fantasy;
+  color: red;
+  text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+
+}
+
+.jumbotron .dave {
+  border-radius: 50%;
+}
+
+body { overflow: hidden; }
+.jumbotron .dave {
+    position: absolute;
+    left: -100%;
+    margin: 7em -244px;
+    animation: slide 4s infinite;
+}
+@keyframes slide {
+    0% { left: -150%; }
+    25% { left: 25%; }
+    50% { left: 50%; }
+    75% { left: 75%; }
+    100% { left: 150%; }
+}
+
+body { overflow: scroll; }
+.jumbotron .bikepic {
+    position: absolute;
+    left: 75%;
+    margin: 7em -244px;
+    animation: slide 3s infinite;
 }
